--- a/catch-a-phish/index.html
+++ b/catch-a-phish/index.html
@@ -54,7 +54,7 @@
     <!-- Loads the Javascript code...-->
     <script src="src/Runtime.js"></script>
 
-    <script>
+  <script>
 
 	// Detection of when the html file is ran locally.
 	// You can remove this code for the final version
@@ -69,32 +69,30 @@
 		document.write('</div>');
 		throw new error("Cannot run application");
 	}
-
   </script>
 </head>
 
 <body>
 
 <div style="display: inline-block; -webkit-user-select: none; text-align: left;">
-    <canvas id="MMFCanvas" width="400" height="400">
+    <canvas id="MMFCanvas" width="720" height="720">
     	Your browser does not support Canvas.
     </canvas>
 </div>
 
-
-    <script>
-        // RUNTIMESTART
-        // This is where the HTML5 runtime is actually started
-        window.addEventListener("load", windowLoaded, false);
-        function windowLoaded()
-        {
-            // Calls the runtime
-            // First parameter : name of the canvas element
-            // Second parameter : path to the cch file. Images and sounds must lay beside this file
-            new Runtime("MMFCanvas", "resources/PhishingGame_Build02.cch");
-        }
-        // RUNTIMESTARTEND
-    </script>
+<script>
+    // RUNTIMESTART
+    // This is where the HTML5 runtime is actually started
+    window.addEventListener("load", windowLoaded, false);
+    function windowLoaded()
+    {
+        // Calls the runtime
+        // First parameter : name of the canvas element
+        // Second parameter : path to the cch file. Images and sounds must lay beside this file
+        new Runtime("MMFCanvas", "resources/PhishingGame_v0.1.2.cch");
+    }
+    // RUNTIMESTARTEND
+</script>
 
 </body>
 </html>
