--- a/catch-a-phish/index.html
+++ b/catch-a-phish/index.html
@@ -38,7 +38,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="HandheldFriendly" content="true" />
 
-  <title>Clickteam Fusion 2.5 HTML5 Runtime</title>
+  <title>Catch a Phish</title>
 
 	<script>
 	   	// Detection of old browsers that do not support the canvas element
@@ -89,7 +89,7 @@
         // Calls the runtime
         // First parameter : name of the canvas element
         // Second parameter : path to the cch file. Images and sounds must lay beside this file
-        new Runtime("MMFCanvas", "resources/PhishingGame_v0.1.2.cch");
+        new Runtime("MMFCanvas", "resources/PhishingGame_v0.1.3.cch");
     }
     // RUNTIMESTARTEND
 </script>
